bin/testsuite/tests/compiler/src/errors/compiler5860.swg
#global testerror "Err0528"

#test
{
    @assert(#typeof(@args()) == const [..] string)
}